# myShCommand

./: .gitignore  CMakeLists.txt  README.md  fileinfo  fileinfo.cpp  mycp.cpp  mycpp1.cpp  myls  myls.cpp  myls_opt.c  mylsl.c  mylsp  myps.c  mypwd.c  mywho.c  testa.c
back/: fileinfo.c  myls  myls.c
include/: Makefile  cmake_install.cmake
